<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a2bbcf"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/percentTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/designer"
            android:gravity="bottom"
            android:text="@string/GPATitleText"
            android:textColor="#1d3849"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/percentDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/designer"
            android:gravity="center"
            android:text="@string/gradeToGPADesc"
            android:textAlignment="center"
            android:textColor="#1d3849"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <EditText
            android:id="@+id/inputPercent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#142f44"
            android:fontFamily="@font/designer"
            android:hint="100"
            android:minHeight="48dp"
            android:textSize="18dp" />

        <Button
            android:id="@+id/toggle"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/calculate"
            android:textColor="#000000"
            android:fontFamily="@font/designer"
            android:backgroundTint="#205b7a" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1.3">

        <TextView
            android:id="@+id/outputPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/designer"
            android:text="@string/GPAOutput"
            android:textAlignment="center"
            android:textColor="#1d3849"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/saveGradePercent"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:backgroundTint="#00A36C"
            android:fontFamily="@font/designer"
            android:text="@string/save"
            android:textColor="#000000" />
    </LinearLayout>
</LinearLayout>