<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a2bbcf"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.4"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/historyTitle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:fontFamily="@font/designer"
            android:gravity="bottom"
            android:text="@string/historyTitle"
            android:textColor="#1d3849"
            android:textSize="26dp" />

        <TextView
            android:id="@+id/historyDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:fontFamily="@font/designer"
            android:gravity="center"
            android:text="@string/historyDesc"
            android:textAlignment="center"
            android:textColor="#1d3849"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/historyListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"
            android:backgroundTint="#205b7a"
            android:fontFamily="@font/designer"
            android:text="@string/clear"
            android:textColor="#000000" />

    </LinearLayout>
</LinearLayout>